Change to using modals for trick slash commands